docs/document/versioned_docs/version-1.10.0/components/desktop/button.md
---
id: button
title: Button
sidebar_label: Button
original_id: button
---

## Overview

The Button component allows the user to create and display buttons.

```jsx live
function ButtonComponent() {
  const divEl = useRef();
  useEffect(() => {
    const Kuc = Kucs["1.10.0"];

    const buttonNormal = new Kuc.Button({
      text: "Normal",
      type: "normal",
      className: "kuc_normal_button",
    });
    const buttonSubmit = new Kuc.Button({
      text: "Submit",
      type: "submit",
      className: "kuc_normal_button",
    });
    const buttonAlert = new Kuc.Button({
      text: "Alert",
      type: "alert",
      className: "kuc_normal_button",
    });

    divEl.current.appendChild(buttonNormal)
    divEl.current.appendChild(buttonSubmit)
    divEl.current.appendChild(buttonAlert)
  }, []);

  return (
    <div className="sample-container" id="button">
      <div id="sample-container__components" ref={divEl}></div>
    </div>
  );
}
```

---

## Specification

### Property

Here is a list of properties that can be used for modifying the component:

| Name | Type | Default | Description | Remark |
| :--- | :--- | :--- | :--- | :--- |
| className | string | ""  | Component class name |  |
| id | string | ""  | Component id name |  |
| text | string | ""  | Text to be displayed inside the button | |
| type | string | "normal"  | Button design type | Available options:<br/>"normal" : Gray (#f7f9fA)<br/>"submit" : Blue (#3498db)<br/>"alert" : Red (#e74c3c) |
| disabled | boolean | false | Enable/Disable the component | |
| visible | boolean | true | Show/Hide the component | |

### Event

Here is a list of events that can be specified:

| Name | Type | Description | Remark |
| :--- | :--- | :--- | :--- |
| click | function | Event handler when clicked | It will pass the event object as the argument |

### Constructor

Button(options)<br/>
Here is a list of available constructors:

#### Parameter

| Name | Type | Default | Description | Remark |
| :--- | :--- | :--- | :--- | :--- |
| options | object | {} | Object that includes component properties | |

### Custom CSS
:::tip
Please check [Custom CSS feature guide](../../getting-started/custom-css.md) at first.
:::

Here is a list of properties that can be used for modifying component style:
#### Property
| Name |
| :--- |
| --kuc-button-width |
| --kuc-button-height |
| --kuc-button-background-color |
| --kuc-button-background-hover |
| --kuc-button-background-active |
| --kuc-button-background-focus |
| --kuc-button-font-size |
| --kuc-button-text-color |

---

## Sample Code

:::tip
Please check the [package installation](../../getting-started/quick-start#installation) method first.
:::

Here is a sample code when all parameters are specified:

```javascript
const Kuc = Kucs['1.x.x'];

const header = kintone.app.getHeaderMenuSpaceElement();

const button = new Kuc.Button({
  text: 'Submit',
  type: 'submit',
  className: 'options-class',
  id: 'options-id',
  visible: true,
  disabled: false
});
header.appendChild(button);

button.addEventListener('click', event => {
  console.log(event);
});
```

---

## Related Articles

- [Search box customization](../../guides/search-box-customization.md)
- [Cleaning check list customization](../../guides/cleaning-check-list-customization.md)
- [Bulk update customization](../../guides/bulk-update-customization.md)
- [Format setting plug-in](../../guides/format-setting-plugin.md)
- [Attachment customization](../../guides/attachment-customization.md)
